5.2.1
-----

* Bug fixes for reForis
  * Updated community translations

5.2.0
-----

* New reForis features
  * Overview tab
  * Storage plugin with option for persistent system logs
  * Factory reset from web interface
  * Support for Honeypot as a Service (haas.nic.cz)
  * Add option to change hostname in reForis
  * Fix DHCP range configuration check
  * A few design improvements
* WebApps: New graphical design with optional dark mode
* Turris MOX: Update firmware for SDIO card
* Add RIPE Atlas SW probe, common passwords as package lists
* Automatic installation of drivers for limited amount of LTE and DVB devices

5.1.10
-----

* Fixed Python3 vulnerabilities - CVE-2021-3177 and CVE-2021-23336
* Fixed Open vSwitch vulnerability - CVE-2020-35498
* Fixed screen vulnerability - CVE-2021-26937
* Fixed BIND vulnerability - CVE-2020-8625

5.1.9
-----

* Based on the latest OpenWrt 19.07.7
  * Updated kernel to version 4.14.221
* Fixed Baron Samedit sudo vulnerability - CVE-2021-3156
* Fixed wolfSSL vulnerabilities - CVE-2021-3336 and CVE-2020-36177

5.1.8
-----

* Minor fixes in logging of dnsmasq

5.1.7
-----

* Based on the latest OpenWrt 19.07.6 version
* Security update for dnsmasq
  * Fixes DNS vulnerabilities named DNSpooq

5.1.6
-----

* Fixed possible XSS issue in Foris next query parameter.
* Fixed syslog warning in resolver dynamic domain script.

5.1.5
-----

* Based on the latest OpenWrt 19.07.5 version
* Fix for OpenVPN client when filename has multiple dots or dashes
* Fixed bug in reForis in setting up custom mail server for notifications
* Improvements regarding Data Collection in migration script from Turris OS 3.x

5.1.4
-----

* Update DNS rules based on DNS Flag Day 2020
* Fixed issue in Netboot list while using opt-in migration from Turris OS 3.x
* Several other fixes

5.1.3
-----

* Fixed issue when CA for OpenVPN was not created in some cases
* Make factory reset on Turris Shield easier - long pressing RESET button does factory reset

5.1.2