@@ -3,6 +3,7 @@
 
 * Bug fixes for reForis
   * Updated community translations
+* Fix potential OpenVPN server breakage because of skipped dhparam migration
 
 5.2.0
 -----
